--- a/main.tex
+++ b/main.tex
@@ -119,6 +119,8 @@
 \usepackage{animate} % for animations in 3D
 \usepackage{pdfpages}
 
+\usepackage{epigraph} % for quote
+
 \usepackage{textcomp} % To avoid warnings in gensymb
 \usepackage{gensymb} % for degree symbol
 
