--- a/references.bib
+++ b/references.bib
@@ -511,11 +511,20 @@ volume = {511},
 year = {1993}
 }
 
+@article{NatureEditorial2018,
+   doi = {10.1038/s41929-018-0188-0},
+   issue = {November},
+   journal = {Nature Catalysis},
+   pages = {807-808},
+   title = {Mind the gap},
+   volume = {1},
+   year = {2018},
+}
+
 @article{Baerns2005,
 abstract = {To understand the "pressure and material gap" in the platinum-catalyzed ammonia oxidation over Pt, the reaction was studied over a wide range of pressures (10-3-105 Pa) and temperatures (293-1073 K) with different Pt catalysts: stepped Pt(533) single crystal, knitted Pt gauze, and Pt foil. Experiments were supplemented by theory applying DFT calculations. It was concluded that the primary reaction step of NH3 oxidation, stripping of hydrogen from the NH3 molecule, is favored by the presence of surface O and OH species. The latter species are more active for dehydrogenation of NH2 and NH fragments. NO and N2 are the only nitrogen-containing products detected under UHV conditions (p<10-1 Pa). N2O was observed, however, at about 6 Pa (peak pressure) in the temporal analysis of products (TAP) reactor and under ambient pressure conditions of 100 kPa in a microstructured reactor. The pressure dependence of N2O formation is suggested to be related to a minimum surface coverage by reaction intermediates required for N2O formation, which is a real "pressure gap" phenomenon. Independently of the pressure range (10-3-105 Pa) and the type of Pt specimen, N2 formation prevails at low temperatures (<700 K), whereas NO production increases with temperature and becomes the dominant reaction channel at high temperature. Catalyst characterization by SEM revealed a reconstruction of the Pt surface after ammonia oxidation at ambient pressure. The degree of surface restructuring is related to the total exposure of the catalyst to the reactants. Surface roughening contributes to activation of the catalyst and changes in its selectivity. {\textcopyright} 2005 Elsevier Inc. All rights reserved.},
 author = {Baerns, M. and Imbihl, R. and Kondratenko, V. A. and Kraehnert, R. and Offermans, W. K. and {Van Santen}, R. A. and Scheibe, A.},
 doi = {10.1016/j.jcat.2005.03.002},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Baerns et al. - 2005 - Bridging the pressure and material gap in the catalytic ammonia oxidation Structural and catalytic properties of.pdf:pdf},
 issn = {00219517},
 journal = {Journal of Catalysis},
 keywords = {Ammonia oxidation,Microstructured reactor,N2O,NH3,Platinum,SEM,Surface restructuring of Pt catalysts,TAP reactor,UHV reactor},
@@ -525,6 +534,7 @@ title = {{Bridging the pressure and material gap in the catalytic ammonia oxidat
 volume = {232},
 year = {2005}
 }
+
 @phdthesis{Ackermann1980,
 author = {Ackermann, M.D.},
 file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ackermann - 1980 - Operando SXRD A New View on Catalysis.pdf:pdf},
@@ -3634,36 +3644,6 @@ volume = {354},
 year = {2016}
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @article{maia_hawk_2010,
    title = {Hawk: the image reconstruction package for coherent {X}-ray diffractive imaging},
    volume = {43},
@@ -4642,11 +4622,8 @@ doping, a net material gain of {\textasciitilde}400 cm-1 can be obtained from th
    author = {Boesecke, P.},
    month = 01,
    year = {2007},
-   note = {At the beamlines ID01 and ID02 of the European Synchrotron Radiation Facility in Grenoble, France, position-sensitive detectors for time-resolved small- and wide-angle X-ray scattering experiments are in use. The applied data reduction method has never been described comprehensively. This article outlines the parametrization of the raw data and introduces the programs developed for this purpose. Data reduction in the sense of this article means all steps between detector readout and normalization to absolute scattering intensities. This includes all corrections that can be made without any specific knowledge of the sample, e.g. detector dark-image correction, division by a flat-field and intensity normalization. Processed data are either two- or one-dimensional. Optionally, statistical errors can be propagated through the calculations.},
    keywords = {absolute intensity normalization, data format, image transformations, metadata, pinhole camera, SAXS, statistical error propagation, synchrotron X-rays, time-resolved experiments, two-dimensional data processing, WAXS},
-   file = {Boesecke - 2007 - Reduction of two-dimensional small- and wide-angle.pdf:/Users/marieingridrichard/Zotero/storage/A8CADA97/Boesecke - 2007 - Reduction of two-dimensional small- and wide-angle.pdf:application/pdf;Snapshot:/Users/marieingridrichard/Zotero/storage/VX5W77R6/paper.html:text/html}
 }
-
 
 @Article{Bradley1995,
 author={Bradley, J. M.
@@ -4655,7 +4632,7 @@ and King, D. A.},
 title={Control of a Biphasic Surface Reaction by Oxygen Coverage: The Catalytic Oxidation of Ammonia over Pt{\{}100{\}}},
 journal={The Journal of Physical Chemistry},
 year={1995},
-month={Nov},
+month={11},
 day={01},
 publisher={American Chemical Society},
 volume={99},
@@ -4665,13 +4642,12 @@ issn={0022-3654},
 doi={10.1021/j100046a032},
 }
 
-
 @Article{Davidson2009,
 author={Davidson, Eric A.},
 title={The contribution of manure and fertilizer nitrogen to atmospheric nitrous oxide since 1860},
 journal={Nature Geoscience},
 year={2009},
-month={Sep},
+month={09},
 day={01},
 volume={2},
 number={9},
@@ -6048,7 +6024,7 @@ and Hsiung, Thomas H.},
 title={A new research pilot plant unit for ammonia oxidation processes and some gauze data comparisons for nitric acid process},
 journal={Industrial {\&} Engineering Chemistry Process Design and Development},
 year={1982},
-month={Jan},
+month={01},
 day={01},
 publisher={American Chemical Society},
 volume={21},
@@ -6064,7 +6040,7 @@ and Tilley, J. N.},
 title={Catalysts for Oxidation of Ammonia to Oxides of Nitrogen},
 journal={Industrial {\&} Engineering Chemistry},
 year={1934},
-month={Dec},
+month={12},
 day={01},
 publisher={American Chemical Society},
 volume={26},
@@ -6086,7 +6062,6 @@ doi = {https://doi.org/10.1016/j.apcata.2005.01.033},
 url = {https://www.sciencedirect.com/science/article/pii/S0926860X05000669},
 author = {Lenka Hannevold and Ola Nilsen and Arne Kjekshus and Helmer Fjellvåg},
 keywords = {Platinum–rhodium catalyst reconstruction, Ammonia oxidation, Catalytic etching, “Cauliflower”-shaped excrescences},
-abstract = {The oxidation of ammonia to nitrogen monoxide is catalyzed by platinum–rhodium alloys. During the first few hours of operation the originally smooth surfaces on Pt–Rh catalysts with Rh contents of 0–13 and 100wt.% are heavily reconstructed. The process starts on the grain boundaries, but soon spreads to cover the entire surface with “cauliflower”-like excrescences. Only slight reconstructions on the grain boundaries are observed for Pt/20wt.% Rh and Pt/30wt.% Rh catalysts. The present paper describes studies of oxidation of ammonia along Pt–Rh catalyst wires, including mass spectrometric surveys of the gaseous species formed. Scanning electron microscopy, electron microprobe, and X-ray powder diffraction characterizations were made of the catalyst wires before and after reaction. The amount and appearance of the reconstructions depend strongly on the Rh content of the catalyst. Marked concentration gradients in platinum-to-rhodium content are observed between wires and “cauliflowers” as well as within the “cauliflowers”. A qualitative account for the formation of the “cauliflowers” and related features is advanced using concepts from chemical vapor-transport reactions. PtO2 and/or RhO2 act as transporting molecules and the processes are driven by local temperature gradients between hotspots and colder regions on the catalyst surface. The ultimate net effect of the involved atomic transfer processes is to establish an approximately equiatomic (Pt50Rh50) composition at all catalyst surfaces.}
 }
 
 @article{McCabe1986,
@@ -8052,7 +8027,6 @@ year = {2001}
    issn = {1530-6984},
    shorttitle = {Germanium {Nanowire} {Epitaxy}},
    doi = {10.1021/nl052231f},
-   abstract = {Epitaxial growth of nanowires along the 〈111〉 directions was obtained on Ge(111), Ge(110), Ge(001), and heteroepitaxial Ge on Si(001) substrates at temperatures of 350 °C or less by gold-nanoparticle-catalyzed chemical vapor deposition. On Ge(111), the growth was mostly vertical. In addition to 〈111〉 growth, 〈110〉 growth was observed on Ge(001) and Ge(110) substrates. Tapering was avoided by the use of the two-temperature growth procedure, reported earlier by Greytak et al.},
    number = {2},
    urldate = {2018-07-04},
    journal = {Nano Letters},
